[package]
name = "sniproxy"
version = "0.1.0"
authors = ["Jamey Sharp <jamey@minilop.net>"]
edition = "2018"

[dependencies]
nix = "0.17.0"
pin-utils = "0.1.0-alpha.4"

[dependencies.tokio]
version = "0.2"
features = ["rt-core", "rt-util", "io-util", "tcp", "uds", "time", "macros", "signal"]

[profile.release]
lto = "fat"
# This is vaguely security-sensitive software, so overflows and panics should
# fail quickly. Anyway it's fully stateless so restarting it doesn't hurt much.
overflow-checks = true
panic = "abort"
